Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14630

Git log is not aborted when changing properties

XMLWordPrintable

    • 1b0e5d787a3bc2d5916c85f9d9f7d01a5a6c75ee

      • Open git log
      • While it is processing, click Show Diff

      The previous log should be aborted, but it is not. The last process that finishes wins the editor (for example, if the initial log had a diff, and it takes longer than the second execution without a diff, the log will contain diff).

      Apparently broken by e0c5ff03ec3c23691d88318f75b9c993ca594054.

        For Gerrit Dashboard: QTCREATORBUG-14630
        # Subject Branch Project Status CR V

            orgads Orgad Shaneh
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes