VCS: Abort previous command for the same editor

Broken by e0c5ff03ec3c23691d88318f75b9c993ca594054.

Task-number: QTCREATORBUG-14630
Change-Id: I123d86b45c6fbc05c7f4cfb52c0be705f75abb75
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>